--- a/src/index.css
+++ b/src/index.css
@@ -68,11 +68,11 @@ nav a {
 }
 
 .violet-gradient {
-  background: #804dee;
-  background: linear-gradient(-90deg, #804dee 0%, rgba(60, 51, 80, 0) 100%);
+  background: var(--skyblue);
+  background: linear-gradient(-90deg, var(--skyblue) 0%, rgba(60, 51, 80, 0) 100%);
   background: -webkit-linear-gradient(
     -90deg,
-    #804dee 0%,
+    var(--skyblue) 0%,
     rgba(60, 51, 80, 0) 100%
   );
 }
