--- a/src/index.css
+++ b/src/index.css
@@ -47,6 +47,20 @@ nav a {
   left: 0;
 }
 
+.about-me__picture {
+  width: 100%;
+}
+
+.about-me__picture--mask {
+  width: 120px;
+  /* height: 100px; */
+  border-radius: 70%;
+  overflow: hidden;
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.5);
+  margin-top: 6rem;
+  margin-right: 6rem;
+}
+
 .hash-span {
   margin-top: -100px;
   padding-bottom: 100px;
